trying to get all the data from the API
